# terratech_demo

./: .gitignore  CMakeLists.txt  main.cpp
asset/crypto/: README  privcertificate.p8  privkey.p8  privkey.pem  pubcertificate.der  pubkey.der
asset/data/: Game Data.json  barrack.json  building.list  farm.json  fishing_boat.json  galley.json  mage.json  shader.list  site.list  stockpile.json  texture.list  tower.json  trebuchet.json  units.list  virtual_texture.list  wood_golem.json  zepplin.json
asset/data/building/: barrack.json  bridge.json  dock.json  farm.json  forum.json  laboratory.json  stockpile.json  tower.json  wall.json  workshop.json
asset/data/unit/: archer.json  fishing_boat.json  galley.json  gold_golem.json  knight.json  mage.json  meat_golem.json  stone_golem.json  swordsman.json  trebuchet.json  wood_golem.json  worker.json  zepplin.json
asset/shader/: billboard.frag  billboard.vert  fow.frag  fow.vert  fullscreen.frag  fullscreen.vert  selection.vert  standard.frag  standard.vert
asset/texture/dev/: font8x8.xcf  terrain.xcf
asset/texture/unit/: archer.ase  knight.ase  swordsman.ase
asset/world/: default.world
data/: Game Data.json
script/: format_json.sh  generate_rsa_keys.sh
src/: actor.7z  bounding_box.hpp  camera.cpp  camera.hpp  chunk_renderer.cpp  chunk_renderer.hpp  game.cpp  game.hpp  main.cpp  world_renderer.hpp
src/actor/: actor.hpp  base_unit.hpp  building.hpp  map.h  region.h  ressource.hpp  ressource_type.hpp  ressource_value.hpp  target_handle.cpp  target_handle.hpp  unit.hpp  unit_fly_weight.hpp  unit_flyweight.hpp  unit_manager.cpp  unit_manager.hpp
src/async/: task.hpp  task_executor.cpp  task_executor.hpp
src/client/: game.cpp  game.hpp  main.cpp
src/client/constant/: rendering.hpp
src/client/control/: build_commands.cpp  build_commands.hpp  camera_commands.hpp  command.hpp  event_manager.cpp  event_manager.hpp  key_input_handler.cpp  key_input_handler.hpp  mouse_input_handler.cpp  mouse_input_handler.hpp
src/client/debug/: profiler.hpp  profiler_administrator.hpp
src/client/opengl/: debug.cpp  frame_buffer.cpp  frame_buffer.hpp  program.cpp  program.hpp  texture.cpp  texture.hpp
src/client/rendering/: camera.hpp  chunk_renderer.cpp  chunk_renderer.hpp  mesh.cpp  mesh.hpp  rendering_manager.cpp  rendering_manager.hpp  virtual_texture.hpp  world_renderer.cpp  world_renderer.hpp
src/client/sdl/: context.hpp  istream_rwops.hpp  sdl.hpp
src/collision/: aabb_shape.hpp  circle_shape.hpp  collision_detector.hpp
src/common/: bounding_box.hpp
src/common/actor/: actor.cpp  actor.hpp  actor_arena.hpp  base_unit.cpp  base_unit.hpp  building.hpp  ressource_value.hpp  target_handle.cpp  target_handle.hpp  unit.cpp  unit.hpp  unit_flyweight.cpp  unit_flyweight.hpp  unit_manager.cpp  unit_manager.hpp
src/common/async/: event.hpp  spinlock.cpp  spinlock.hpp  task.hpp  task_executor.cpp  task_executor.hpp
src/common/collision/: aabb_shape.cpp  circle_shape.cpp  collision_detector.cpp  collision_detector.hpp
src/common/crypto/: aes.cpp  aes.hpp  iterator_sink.hpp  rsa.cpp  rsa.hpp
src/common/datadriven/: data_list.hpp  shader_list_record.hpp  texture_list_record.cpp  texture_list_record.hpp  virtual_texture_list_record.cpp  virtual_texture_list_record.hpp
src/common/game/: base_game.cpp  base_game.hpp
src/common/memory/: allocator.hpp  allocator_traits.hpp  arena.hpp  frame_allocator.cpp  frame_allocator.hpp  heap_allocator.cpp  heap_allocator.hpp  malloc_allocator.cpp  malloc_allocator.hpp  memory_pool.hpp  stack_allocator.cpp  stack_allocator.hpp  static_vector.hpp  unique_ptr.hpp  utils.hpp
src/common/networking/: build.cpp  build.hpp  header.hpp  network_manager.cpp  network_manager.hpp  networking_constant.hpp  packet.cpp  packet.hpp  player_init.cpp  player_init.hpp  socket_set.cpp  socket_set.hpp  tcp_socket.cpp  tcp_socket.hpp  update_target.cpp  update_target.hpp  world_chunk.hpp  world_map.hpp
src/common/task/: update_player_visibility.cpp  update_player_visibility.hpp  update_units.cpp  update_units.hpp
src/common/time/: clock.hpp
src/common/util/: vec_hash.hpp
src/common/world/: constants.hpp  infinite_world.cpp  site.cpp  start_position_finder.hpp  visibility_map.cpp  visibility_map.hpp  world.cpp  world.hpp  world_chunk.cpp  world_chunk.hpp  world_generator.cpp  world_generator.hpp
src/control/: all_commands.hpp  camera_commands.hpp  change_unit_command.cpp  change_unit_command.hpp  command.hpp  generic_command.hpp  input_handler.hpp  key_input_handler.cpp  key_input_handler.hpp
src/crypto/: rsa.cpp  rsa.hpp
src/datadriven/: shader_list_record.cpp  virtual_texture_list_record.cpp  virtual_texture_list_record.hpp
src/debug/: profiler.hpp  profiler_administrator.hpp
src/opengl/: buffer.cpp  buffer.hpp  debug.cpp  debug.hpp  opengl.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform.hpp  vertex_array.cpp  vertex_array.hpp
src/rendering/: camera.cpp  camera.hpp  chunk_renderer.cpp  chunk_renderer.hpp  mesh.cpp  mesh.hpp  rendering_manager.cpp  rendering_manager.hpp  virtual_texture.cpp  virtual_texture.hpp  world_renderer.cpp  world_renderer.hpp
src/sdl/: context.hpp  istream_rwops.cpp  poll_event_iterator.cpp  poll_event_iterator.hpp  sdl.hpp  window.cpp  window.hpp
src/server/: authoritative_game.cpp  authoritative_game.hpp  client.cpp  client.hpp  main.cpp  server.cpp  server.hpp  server_unit_manager.cpp  server_unit_manager.hpp
src/shader/: standard.vert
src/task/: thread_pool.cpp  thread_pool.hpp
src/world/: biome_type.hpp  site.hpp  world.cpp  world.hpp  world_chunk.cpp  world_chunk.hpp  world_generator.cpp  world_generator.hpp
src/wrapper/: opengl.cpp  opengl.hpp  sdl.cpp  sdl.hpp
tool/: CMakeLists.txt
tool/sequence_maker/: CMakeLists.txt  SequenceMaker3000.cpp
